objects/SalesRep__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmployeeID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICM_Employee_ID__c</fullName>
        <label>ICM_Employee_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_RoleID_External__c</fullName>
        <externalId>true</externalId>
        <label>ICM_RoleID_External</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Employee_ID__c</fullName>
        <label>Owner Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_End_Date__c</fullName>
        <label>Role End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <description>It Contains the Role of  each Sales Representative</description>
        <label>Role Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Start_Date__c</fullName>
        <label>Role Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Role Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SalesRep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmployeeID__c</columns>
        <columns>ICM_Employee_ID__c</columns>
        <columns>ICM_RoleID_External__c</columns>
        <columns>Role_End_Date__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Role_Start_Date__c</columns>
        <columns>Role_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Role ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesReps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>